--- a/package.json
+++ b/package.json
@@ -24,14 +24,18 @@
     "@nestjs/core": "^11.0.1",
     "@nestjs/platform-express": "^11.0.1",
     "@nestjs/swagger": "^11.1.0",
+    "child_process": "^1.0.2",
     "class-transformer": "^0.5.1",
     "class-validator": "^0.14.1",
     "cross-fetch": "^4.1.0",
+    "mathjs": "^14.4.0",
     "nestjs": "^0.0.1",
     "reflect-metadata": "^0.2.2",
     "rxjs": "^7.8.1",
     "satellite.js": "^5.0.0",
-    "swagger-ui-express": "^5.0.1"
+    "sgp4": "^1.0.10",
+    "swagger-ui-express": "^5.0.1",
+    "three": "^0.175.0"
   },
   "devDependencies": {
     "@eslint/eslintrc": "^3.2.0",
